[package]
name = "lau-mirror-control"
version = "0.1.0"
edition = "2021"
description = "Mirror symmetry between estimation and control: Opus Pass 2.3 discovery"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-mirror-control"

[dependencies]
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-complex = "0.4"

[dev-dependencies]
approx = "0.5"
